# compiler-solidity

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh  test.yul
.github/: CODEOWNERS
src/: arguments.rs  dump_flag.rs  error.rs  file_type.rs  generator.rs  lexer.rs  lib.rs  llvm.rs  main.rs  source_data.rs  target.rs  tests.rs  yul2zinc.rs
src/evm/assembly/: data.rs  mod.rs
src/evm/assembly/instruction/: codecopy.rs  jump.rs  mod.rs  name.rs  stack.rs  storage.rs
src/evm/ethereal_ir/: entry_link.rs  mod.rs
src/evm/ethereal_ir/function/: mod.rs  queue_element.rs  visited_element.rs
src/generator/: action.rs  file_type.rs  llvm.rs  mod.rs
src/generator/llvm/: address_space.rs  argument.rs  context_value.rs  dependency.rs  function.rs  intrinsic.rs  loop.rs  mod.rs
src/generator/llvm/function/: mod.rs  return.rs
src/input/: contract.rs  mod.rs
src/input/error/: mod.rs
src/lexer/: error.rs  mod.rs  tests.rs
src/lexer/lexeme/: comment.rs  keyword.rs  mod.rs  symbol.rs
src/lexer/lexeme/comment/: single_line.rs
src/lexer/lexeme/literal/: boolean.rs  integer.rs  string.rs
src/lib/: yul2zinc.rs
src/parser/: comment.rs  error.rs  identifier.rs  mod.rs  type.rs
src/parser/block/: mod.rs
src/parser/block/statement/: assignment.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  variable_declaration.rs
src/parser/object/: mod.rs
src/parser/object/code/: mod.rs
src/parser/statement/: assignment.rs  block.rs  code.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  object.rs  variable_declaration.rs
src/parser/statement/expression/: literal.rs  mod.rs
src/parser/statement/switch/: case.rs  mod.rs
src/project/: contract.rs  mod.rs
src/project/contract/: mod.rs  state.rs
src/project/contract/source/: evm.rs  mod.rs  yul.rs
src/solc/: hashes.rs  mod.rs  pipeline.rs
src/solc/combined_json/: contract.rs  mod.rs
src/solc/input/: mod.rs  source.rs
src/solc/input/settings/: mod.rs  optimizer.rs
src/solc/output/: contract.rs  mod.rs  source.rs
src/solc/output/error/: source_location.rs
src/solc/standard_json/input/: mod.rs
src/solc/standard_json/output/: contract.rs  mod.rs  source.rs
src/tester/: arguments.rs  main.rs
src/tree/: comment.rs  identifier.rs  literal.rs  mod.rs
src/tree/block/: mod.rs
src/tree/block/statement/: assignment.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  variable_declaration.rs
src/yul/: mod.rs
src/yul-compiler/: arguments.rs  main.rs
src/yul/lexer/: mod.rs
src/yul/lexer/lexeme/: mod.rs
src/yul/parser/: error.rs  identifier.rs  mod.rs  type.rs
src/yul/parser/statement/: assignment.rs  block.rs  code.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  object.rs  variable_declaration.rs
src/yul2llvm/: arguments.rs  main.rs
src/yul2llvm-tester/: arguments.rs  main.rs
src/yulc/: arguments.rs  main.rs
src/zksolc/: arguments.rs  main.rs
test/: 01.sol  01.yul  02.sol  03.sol  04.sol  05.sol  06.sol  07.sol
(+71 files in other folders)
