[package]
name = "compiler-solidity"
version = "0.8.13"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
license = "Apache-2.0"
edition = "2021"
description = "The zkEVM Solidity compiler"

[[bin]]
name = "zksolc"
path = "src/zksolc/main.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
colored = "2.0"
anyhow = "1.0"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = "1.0"
rand = "0.8"
regex = "1.5"
semver = "1.0"
hex = "0.4"

zkevm-assembly = { git = "ssh://git@github.com/matter-labs/zkEVM-assembly" }
compiler-common = { git = "ssh://git@github.com/matter-labs/compiler-common" }
compiler-llvm-context = { git = "ssh://git@github.com/matter-labs/compiler-llvm-context" }

[dependencies.inkwell]
git = "ssh://git@github.com/matter-labs-forks/inkwell"
branch = "master"
default-features = false
features = ["llvm13-0", "target-syncvm"]
